...
    var body: some View {
        NavigationStack {
            TeslaAuthWebViewWrapper(session: session)
                .ignoresSafeArea(edges: .bottom)
                .toolbar {
                    ToolbarItem(placement: .cancellationAction) {
                        Button("Cancel", systemImage: "xmark.circle.fill") {
                            dismiss()
                        }
                        .labelStyle(.iconOnly)
                        .foregroundStyle(.secondary)
                    }
                }
...
